--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 <!-- Main JS Link -->
 <script src="js/main.js" type="text/javascript"></script>
-<!-- <script src="js/dynamicMapping.js" type="text/javascript"></script> -->
+<script src="js/dynamicMapping.js" type="text/javascript"></script>
 <script src="js/animation.js" type="text/javascript"></script>
 <script src="js/variableDeclaration.js" type="text/javascript"></script>
 
