Aduible set up, image upload/font upload

--- a/index.html
+++ b/index.html
@@ -23,51 +23,30 @@
     <!-- Banner Background Backup Image -->
     <img class="background" id="background_img"></img>
 
-    <!-- SECTION 1 -->
-    <!-- Audible Logo -->
-    <img class="section1" id="s1_logo"></img>
-    <!-- Audible Headline -->
-    <img class="section1" id="s1_headline"></img>
-    <img class="section1" id="s1_text1"></img>
-    <img class="section1" id="s1_text2"></img>
-    <img class="section1" id="s1_text3"></img>
-    <img class="section1" id="s1_text4"></img>
-    <!-- Audible Bookwall -->
-    <img class="section1" id="s1_bookwall1"></img>
-    <img class="section1" id="s1_bookwall2"></img>
-    <img class="section1" id="s1_bookwall-horizontal"></img>
-    <img class="section1" id="s1_bookwall-vertical"></img>
-    <!-- Audible Disclaimer -->
-    <img class="section1" id="s1_disclaimer"></img>
-    <!-- Audible CTA -->
-    <img class="section1" id="s1_cta"></img>
-
-    <!-- SECTION 2 -->
-    <!-- Audible Logo -->
-    <img class="section2" id="s2_logo"></img>
-    <!-- Audible Headline -->
-    <img class="section2" id="s2_headline"></img>
-    <img class="section1" id="s2_text1"></img>
-    <img class="section1" id="s2_text2"></img>
-    <img class="section1" id="s2_text3"></img>
-    <img class="section1" id="s2_text4"></img>
-    <!-- Audible Bookwall -->
-    <img class="section2" id="s2_bookwall1"></img>
-    <img class="section2" id="s2_bookwall2"></img>
-    <img class="section2" id="s2_bookwall-horizontal"></img>
-    <img class="section2" id="s2_bookwall-vertical"></img>
-    <!-- Audible Disclaimer -->
-    <img class="section2" id="s2_disclaimer"></img>
-    <!-- Audible CTA -->
-    <img class="section2" id="s2_cta"></img>
-
+    <div id="section1" class="section1">
+      <!-- SECTION 1 -->
+      <!-- Audible Logo -->
+      <img class="sectionLogo" id="s1_logo" src="assets/images/logo.png"></img>
+      <!-- Audible Headline -->
+      <p class="sectionCopy1" id="s1_text1">The</p>
+      <p class="sectionCopy2" id="s1_text2">Home of</p>
+      <p class="sectionCopy3" id="s1_text3">Story</p>
+      <p class="sectionCopy4" id="s1_text4">Telling</p>
+      <!-- Audible Bookwall -->
+     <img class="sectionImg1" id="s1_img1" src="assets/images/poster1.png"></img>
+     <img class="sectionImg2" id="s1_img2" src="assets/images/poster2.png"></img>
+      <!-- Audible Disclaimer -->
+      <img class="section1" id="s1_disclaimer"></img>
+      <!-- Audible CTA -->
+      <button class="section1_cta" id="s1_cta">Listen Now</button>
+    </div>
   </div>
 </body>
 
 <!-- Main JS Link -->
 <script src="js/main.js" type="text/javascript"></script>
 <!-- <script src="js/dynamicMapping.js" type="text/javascript"></script> -->
-<script src="js/animation.js" type="text/javascript"></script>
+<!-- <script src="js/animation.js" type="text/javascript"></script> -->
 <script src="js/variableDeclaration.js" type="text/javascript"></script>
 
 </html>
