add disclaimer text to ad

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
      <img class="sectionImg1" id="s1_img1" src="assets/images/poster1.png"></img>
      <img class="sectionImg2" id="s1_img2" src="assets/images/poster2.png"></img>
       <!-- Audible Disclaimer -->
-      <img class="section1" id="s1_disclaimer"></img>
+      <p class="sectionDisclaimer" id="s1_disclaimer">£7.99 a month after 30 days. Cancel anytime.</p>
       <!-- Audible CTA -->
       <button class="section1_cta" id="s1_cta">Listen Now</button>
     </div>
